k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fk8s
  namespace: fk8s
  labels:
    app: fk8s
spec:
  type: ClusterIP
  selector:
    app: fk8s
  ports:
    - name: http
      port: 80
      targetPort: http
