k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fk8s
  namespace: fk8s
spec:
  ingressClassName: nginx
  rules:
    - host: fk8s.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fk8s
                port:
                  name: http
